--- a/Assignment 5.1.ipynb
+++ b/Assignment 5.1.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Result of Division by Five -  Error dividing by zero\n"
+      "The Result of Division by zero -  Error dividing by zero\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
     "        return(\"Error dividing by zero\")\n",
     "    return x    \n",
     "result = DivideByFive()\n",
-    "print(\"The Result of Division by Five - \", result)"
+    "print(\"The Result of Division by zero - \", result)"
    ]
   },
   {
